config/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  admin
  labels:
    run:  admin
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      run:  admin
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        run:  admin
    spec:
      containers:
      - image:  moficodes/ibmcloud-kubernetes-admin:v0.1.20
        imagePullPolicy: Always
        name:  kubeadmin
        resources:
          limits:
            cpu: 1000m
            memory: 4Gi
          requests:
            cpu: 1000m
            memory: 4Gi
      restartPolicy: Always
