config/service.yaml
kind: Service
apiVersion: v1
metadata:
  name:  admin
  labels:
    run: admin
spec:
  selector:
    run:  admin
  type:  NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 9000
