config/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ibmcloud-kube-admin-ingress
  annotations:
    ingress.bluemix.net/redirect-to-https: "True"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts: 
        - kubernetes.admin.ibmdeveloper.net
      secretName: kube-admin-secret
  rules:
    - host: kubernetes.admin.ibmdeveloper.net
      http:
        paths:
          - path: /
            backend:
              serviceName: admin
              servicePort: 80
